Finish styling footer, fix header and top nav with z-index, adjust final padding and margins for layout.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,4 @@
 
-
 header {
   display: flex;
   justify-content: space-between;
@@ -8,6 +7,12 @@ header {
   font-size: 14px;
   font-weight: bold;
   border-bottom: 1px solid black;
+  padding: 10px 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 5;
+  background-color: white;
   }
 
 header .logo {
@@ -17,6 +22,10 @@ header .logo {
   color: MediumAquamarine;
   flex-grow: 1;
 
+}
+
+.header-title {
+  padding-left: 10px;
 }
 
 nav {
@@ -37,13 +46,14 @@ a {
 main {
   display: flex;
   justify-content: space-between;
+  margin-top: 120px;
+  margin-bottom: 100px;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-
-}
+  }
 
 .column.large {
   width: 630px;
@@ -96,9 +106,13 @@ main {
   color: black;
 }
 
+.story {
+  margin: 0px 30px;
+  }
+
 .stories {
   display: flex;
-}
+  }
 
 .news-bites {
   display: flex;
@@ -113,7 +127,6 @@ main {
   }
 
 .news-bites span {
-  border-top: 1px solid black;
   border-bottom: 1px solid black;
   display: block;
   padding: 10px 20px;
@@ -133,4 +146,17 @@ footer {
   margin: auto;
   font-family: Verdana;
   font-size: 12px;
+}
+
+.footer-title {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-right: 20px;
+  border-right: 2px solid white;
+}
+
+.copyright {
+  margin-top: 20px;
 }
